# lens

./: .gitignore  CHANGELOG.md  LICENSE  PORT-REFERENCE-session-ingester.md  README.md  index.html  package.json  pricing.yaml  projects.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
Formula/: lens.rb
docs/: agent-activity-v1.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: smoke_real_data.rs
src-tauri/src/: agent_activity.rs  event_id.rs  lib.rs  pricing.rs  project_resolver.rs
src-tauri/src/adapters/: claude_code.rs  codex.rs  mod.rs
src-tauri/src/ingestion/: mod.rs  pipeline.rs  walker.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/storage/: db.rs  events.rs  issues.rs  mod.rs  query.rs  schema.rs
src/components/: EmptyState.tsx  ErrorBanner.tsx  EventDetailPanel.tsx  FilterChips.tsx  Header.tsx  Timeline.tsx  TimelineRowView.tsx
src/hooks/: useAppStatus.ts  useTimeline.ts
src/types/: ipc.ts
tests/fixtures/: claude-code-session-example.json
