[package]
name = "lens"
version = "0.1.0"
description = "Mac-native AI activity dashboard. Parses session logs from Claude Code, Codex, and other AI tools into a unified project-first timeline."
authors = ["Clay Felmer <cfelmer@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/cfelmer/lens"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

