[package]
name = "lens"
version = "0.1.0"
description = "Mac-native AI activity dashboard. Parses session logs from Claude Code, Codex, and other AI tools into a unified project-first timeline."
authors = ["Clay Felmer <cfelmer@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/cfelmer-ctrlhwo/lens"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1.2.1"
sha2 = "0.11.0"
serde_yml = "0.0.12"
thiserror = "2.0.18"
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }

[dev-dependencies]
filetime = "0.2.29"
notify = "8"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }

